--- a/app/app.component.html
+++ b/app/app.component.html
@@ -5,6 +5,22 @@
 	<meta charset="utf-8" />
 </head>
 <body>
+    <div id="test2">Hello Test</div>
     <h2>{{pageTitle}}</h2>
+    <button class="btn btn-primary" (click)="login()">Login</button>
+    <table class="table table-hover table-condensed">
+                <thead>
+                    <tr class="row bg-primary">
+                        <th sortColumn id="name" (notify)="sortAction($event)">Name</th>
+                        <th sortColumn id="abbr">Abbreviation</th>
+                </thead>
+                <tbody>
+                    <!--TODO: need order by pipe -->
+                    <tr class="row" *ngFor="let item of states">
+                        <td>{{item.Name}}</td>
+                        <td>{{item.Abbreviation}}</td>
+                    </tr>
+                </tbody>
+            </table>
 </body>
 </html>
